--- a/HAR_train_network.ipynb
+++ b/HAR_train_network.ipynb
@@ -97,14 +97,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8369f217",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "d800e987",
    "metadata": {},
@@ -301,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cb608ee9",
    "metadata": {},
    "outputs": [],
@@ -325,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ad42840d",
    "metadata": {},
    "outputs": [
@@ -335,7 +327,7 @@
        "\"class Conv2d_bn(nn.Module):\\n    def init(self, in_filters, out_filters, kernel_size, strides=(1, 1), padding='same'):\\n        super(Conv2d_bn, self).init()\\n        \\n        # Calcola il padding asimmetrico necessario per 'same' padding\\n        if padding == 'same':\\n            if isinstance(kernel_size, tuple):\\n                padding_val = [(k - 1) // 2 for k in kernel_size]\\n                padding_extra = [(k - 1) % 2 for k in kernel_size]\\n            else:\\n                padding_val = (kernel_size - 1) // 2\\n                padding_extra = (kernel_size - 1) % 2\\n        else:\\n            padding_val = 0\\n            padding_extra = 0\\n\\n        self.conv = nn.Conv2d(in_filters, out_filters, kernel_size=kernel_size, stride=strides, padding=padding_val)\\n        self.relu = nn.ReLU()\\n        self.padding = padding_val\\n        self.padding_extra = padding_extra\\n\\n    def forward(self, x):\\n        if self.padding_extra != 0:\\n            x = F.pad(x, [0, self.padding_extra[1], 0, self.padding_extra[0]])\\n        x = self.conv(x)\\n        return self.relu(x)\\n    \""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1ca57529",
    "metadata": {},
    "outputs": [
@@ -382,7 +374,7 @@
        "\"class Conv2d_bn(nn.Module):\\n    def init(self, in_filters, out_filters, kernel_size, strides=(1, 1), padding='same'):\\n        super(Conv2d_bn, self).init()\\n\\n        if isinstance(kernel_size, tuple):\\n            kernel_height, kernel_width = kernel_size\\n        else:\\n            kernel_height = kernel_width = kernel_size\\n\\n        stride_height, stride_width = strides\\n\\n        # Calcola il padding totale necessario per mantenere le dimensioni in uscita uguali a quelle in ingresso\\n        if padding == 'same':\\n            # Calcolo per altezza (height)\\n            total_padding_height = kernel_height - stride_height\\n            pad_top = total_padding_height // 2\\n            pad_bottom = total_padding_height - pad_top\\n            \\n            # Calcolo per larghezza (width)\\n            total_padding_width = kernel_width - stride_width\\n            pad_left = total_padding_width // 2\\n            pad_right = total_padding_width - pad_left\\n\\n            self.padding = (pad_left, pad_right, pad_top, pad_bottom)\\n        else:\\n            self.padding = (0, 0, 0, 0)\\n\\n        self.conv = nn.Conv2d(in_filters, out_filters, kernel_size=kernel_size, stride=strides, padding=0)\\n        self.relu = nn.ReLU()\\n        self.apply(self._init_weights)\\n\\n    def _init_weights(self, module):\\n            if isinstance(module, torch.nn.Linear):\\n                torch.nn.init.xavier_uniform_(module.weight)\\n                if module.bias is not None:\\n                    module.bias.data.zero_()\\n            if isinstance(module, torch.nn.Conv2d):\\n                torch.nn.init.xavier_uniform_(module.weight)\\n                if module.bias is not None:\\n                    module.bias.data.zero_()\\n\\n    def forward(self, x):\\n        # Applica il padding asimmetrico se necessario\\n        if self.padding != (0, 0, 0, 0):\\n            x = F.pad(x, self.padding)\\n        x = self.conv(x)\\n        return self.relu(x)\\n\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "29fa00ea",
    "metadata": {},
    "outputs": [],
@@ -494,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "7618d320",
    "metadata": {},
    "outputs": [],
@@ -539,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "afeadf78",
    "metadata": {},
    "outputs": [
@@ -554,27 +546,72 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train loss: 24.803382873535156:   0%|          | 0/226 [00:00<?, ?it/s]\n",
-      "100%|██████████| 70/70 [00:13<00:00,  5.07it/s]\n"
+      "  0%|          | 0/226 [00:00<?, ?it/s]/home/giovanni/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/nn/modules/conv.py:454: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at /opt/conda/conda-bld/pytorch_1720538352160/work/aten/src/ATen/native/Convolution.cpp:1031.)\n",
+      "  return F.conv2d(input, weight, bias, self.stride,\n",
+      "Train loss: 3.979684829711914: 100%|██████████| 226/226 [01:46<00:00,  2.12it/s] \n",
+      "100%|██████████| 70/70 [00:14<00:00,  4.99it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 22.58417510986328, accuracy: 0.1681574285030365\n",
-      "Saved Model\n"
+      "loss: 1.3086717128753662, accuracy: 0.4127906858921051\n",
+      "Saved Model\n",
+      "Epoch: 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 4.898106098175049: 100%|██████████| 226/226 [01:56<00:00,  1.95it/s] \n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 1.6487890481948853, accuracy: 0.43381038308143616\n",
+      "Epoch: 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 2.516333818435669:  27%|██▋       | 60/226 [00:30<01:25,  1.94it/s] \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_fn(y_pred, batch_y)\n\u001b[1;32m     29\u001b[0m opt\u001b[38;5;241m.\u001b[39mzero_grad() \n\u001b[0;32m---> 30\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#how is it bound to the model?\u001b[39;00m\n\u001b[1;32m     31\u001b[0m opt\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     32\u001b[0m train_error\u001b[38;5;241m.\u001b[39mappend(loss\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy())\n",
+      "File \u001b[0;32m~/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/_tensor.py:521\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    511\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    512\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    513\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    514\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    519\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    520\u001b[0m     )\n\u001b[0;32m--> 521\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    522\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    523\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/autograd/__init__.py:289\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    284\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    286\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    287\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    288\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 289\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    290\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    291\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    292\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    293\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    294\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    295\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    296\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    297\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/autograd/graph.py:768\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    766\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    767\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 768\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    769\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    770\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    771\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    772\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
+    "# Set seeds for reproducibility\n",
+    "# fix this\n",
+    "seed = 203\n",
+    "torch.manual_seed(seed)\n",
+    "\n",
     "model = Inception()\n",
     "opt = Adam(model.parameters(), lr=0.0001)\n",
     "loss_fn = CrossEntropyLoss() # by default reduction=\"mean\" i.e. the output is a scalar\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "model.to(device)\n",
     "\n",
-    "epochs=10\n",
+    "epochs=25\n",
     "best_val = np.inf\n",
     "train_error = []\n",
     "validation_error = []\n",
@@ -587,15 +624,15 @@
     "        batch_y = batch_y.to(device) # batch with the labels\n",
     "        batch_y = t.squeeze(batch_y, dim=1)\n",
     "\n",
-    "        y_pred = model(batch_x) #outputs the logits, i.e. \"raw\" values and not probabilities\n",
+    "        y_pred = model(batch_x) \n",
     "\n",
-    "        loss = loss_fn(y_pred, batch_y) # NB: we pass class indices here\n",
+    "        loss = loss_fn(y_pred, batch_y)\n",
     " \n",
     "        opt.zero_grad() \n",
     "        loss.backward() #how is it bound to the model?\n",
     "        opt.step()\n",
     "        train_error.append(loss.detach().cpu().numpy())\n",
-    "        iterator.set_description(f\"Train loss: {loss.detach().cpu().numpy()}\") # tqdm method\n",
+    "        iterator.set_description(f\"Train loss: {loss.detach().cpu().numpy()}\")\n",
     "\n",
     "    # validation\n",
     "    model.eval() # what does this change?\n",
@@ -628,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "dc5b78a3",
    "metadata": {},
    "outputs": [
