--- a/HAR_train_network.ipynb
+++ b/HAR_train_network.ipynb
@@ -548,8 +548,8 @@
      "text": [
       "  0%|          | 0/226 [00:00<?, ?it/s]/home/giovanni/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/nn/modules/conv.py:454: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at /opt/conda/conda-bld/pytorch_1720538352160/work/aten/src/ATen/native/Convolution.cpp:1031.)\n",
       "  return F.conv2d(input, weight, bias, self.stride,\n",
-      "Train loss: 3.979684829711914: 100%|██████████| 226/226 [01:46<00:00,  2.12it/s] \n",
-      "100%|██████████| 70/70 [00:14<00:00,  4.99it/s]\n"
+      "Train loss: 3.979684829711914: 100%|██████████| 226/226 [01:45<00:00,  2.14it/s] \n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.34it/s]\n"
      ]
     },
     {
@@ -565,8 +565,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train loss: 4.898106098175049: 100%|██████████| 226/226 [01:56<00:00,  1.95it/s] \n",
-      "100%|██████████| 70/70 [00:13<00:00,  5.02it/s]\n"
+      "Train loss: 4.898106098175049: 100%|██████████| 226/226 [01:46<00:00,  2.12it/s] \n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.27it/s]\n"
      ]
     },
     {
@@ -581,21 +581,385 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train loss: 2.516333818435669:  27%|██▋       | 60/226 [00:30<01:25,  1.94it/s] \n"
+      "Train loss: 2.7902073860168457: 100%|██████████| 226/226 [01:45<00:00,  2.15it/s]\n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.34it/s]\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_fn(y_pred, batch_y)\n\u001b[1;32m     29\u001b[0m opt\u001b[38;5;241m.\u001b[39mzero_grad() \n\u001b[0;32m---> 30\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#how is it bound to the model?\u001b[39;00m\n\u001b[1;32m     31\u001b[0m opt\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     32\u001b[0m train_error\u001b[38;5;241m.\u001b[39mappend(loss\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy())\n",
-      "File \u001b[0;32m~/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/_tensor.py:521\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    511\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    512\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    513\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    514\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    519\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    520\u001b[0m     )\n\u001b[0;32m--> 521\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    522\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    523\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/autograd/__init__.py:289\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    284\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    286\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    287\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    288\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 289\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    290\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    291\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    292\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    293\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    294\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    295\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    296\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    297\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/dlproject/lib/python3.12/site-packages/torch/autograd/graph.py:768\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    766\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    767\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 768\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    769\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    770\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    771\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    772\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 1.5698418617248535, accuracy: 0.4145796000957489\n",
+      "Epoch: 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.4862780570983887: 100%|██████████| 226/226 [01:46<00:00,  2.13it/s]\n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 1.2403453588485718, accuracy: 0.43023255467414856\n",
+      "Saved Model\n",
+      "Epoch: 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.1019070148468018: 100%|██████████| 226/226 [01:47<00:00,  2.11it/s]\n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.30it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 1.0349528789520264, accuracy: 0.4561717212200165\n",
+      "Saved Model\n",
+      "Epoch: 6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.1407159566879272: 100%|██████████| 226/226 [01:48<00:00,  2.09it/s]\n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 1.0084837675094604, accuracy: 0.46645796298980713\n",
+      "Saved Model\n",
+      "Epoch: 7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.372406244277954: 100%|██████████| 226/226 [01:45<00:00,  2.14it/s] \n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 1.014904499053955, accuracy: 0.4677996337413788\n",
+      "Epoch: 8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.988206684589386: 100%|██████████| 226/226 [01:46<00:00,  2.12it/s] \n",
+      "100%|██████████| 70/70 [00:13<00:00,  5.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9836652874946594, accuracy: 0.5026833415031433\n",
+      "Saved Model\n",
+      "Epoch: 9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.0744656324386597: 100%|██████████| 226/226 [01:25<00:00,  2.63it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9878639578819275, accuracy: 0.4812164604663849\n",
+      "Epoch: 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.0596834421157837: 100%|██████████| 226/226 [01:10<00:00,  3.21it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.87it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9565891623497009, accuracy: 0.5366726517677307\n",
+      "Saved Model\n",
+      "Epoch: 11\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.0337002277374268: 100%|██████████| 226/226 [01:10<00:00,  3.21it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.941568911075592, accuracy: 0.539355993270874\n",
+      "Saved Model\n",
+      "Epoch: 12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.0386255979537964: 100%|██████████| 226/226 [01:10<00:00,  3.20it/s]\n",
+      "100%|██████████| 70/70 [00:09<00:00,  7.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9849387407302856, accuracy: 0.5022361278533936\n",
+      "Epoch: 13\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.1392440795898438: 100%|██████████| 226/226 [01:10<00:00,  3.21it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9679889678955078, accuracy: 0.5080500841140747\n",
+      "Epoch: 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.8780810236930847: 100%|██████████| 226/226 [01:10<00:00,  3.19it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9555490612983704, accuracy: 0.474955290555954\n",
+      "Epoch: 15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.8719657063484192: 100%|██████████| 226/226 [01:10<00:00,  3.19it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.90it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9266754984855652, accuracy: 0.5295169949531555\n",
+      "Saved Model\n",
+      "Epoch: 16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.8698657751083374: 100%|██████████| 226/226 [01:10<00:00,  3.20it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9300950765609741, accuracy: 0.5152057409286499\n",
+      "Epoch: 17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.7730311155319214: 100%|██████████| 226/226 [01:10<00:00,  3.22it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.90705806016922, accuracy: 0.5478532910346985\n",
+      "Saved Model\n",
+      "Epoch: 18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.9306302070617676: 100%|██████████| 226/226 [01:10<00:00,  3.18it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9298653602600098, accuracy: 0.5214669108390808\n",
+      "Epoch: 19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.02535080909729: 100%|██████████| 226/226 [01:11<00:00,  3.18it/s]  \n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.87it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9318681955337524, accuracy: 0.5161001682281494\n",
+      "Epoch: 20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.8541415333747864: 100%|██████████| 226/226 [01:10<00:00,  3.20it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.8830968141555786, accuracy: 0.5420393347740173\n",
+      "Saved Model\n",
+      "Epoch: 21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.0931533575057983: 100%|██████████| 226/226 [01:10<00:00,  3.20it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.8877580165863037, accuracy: 0.5433810353279114\n",
+      "Epoch: 22\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.742207944393158: 100%|██████████| 226/226 [01:11<00:00,  3.17it/s] \n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9045006036758423, accuracy: 0.5326476097106934\n",
+      "Epoch: 23\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.6489223837852478: 100%|██████████| 226/226 [01:10<00:00,  3.21it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.8719852566719055, accuracy: 0.5742397308349609\n",
+      "Saved Model\n",
+      "Epoch: 24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 1.0732386112213135: 100%|██████████| 226/226 [01:10<00:00,  3.20it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.8409505486488342, accuracy: 0.5885509848594666\n",
+      "Saved Model\n",
+      "Epoch: 25\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.6830071806907654: 100%|██████████| 226/226 [01:10<00:00,  3.20it/s]\n",
+      "100%|██████████| 70/70 [00:08<00:00,  7.89it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.9797645807266235, accuracy: 0.5639534592628479\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -665,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "dc5b78a3",
    "metadata": {},
    "outputs": [
@@ -673,10 +1037,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "target tensor: tensor([4, 3, 1])\n",
-      "target tensor: tensor([[0.0808, 0.2741, 0.1219, 0.4518, 0.0714],\n",
-      "        [0.1243, 0.3703, 0.0939, 0.2450, 0.1664],\n",
-      "        [0.2252, 0.1695, 0.1627, 0.2942, 0.1484]])\n"
+      "target tensor: tensor([1, 1, 0])\n",
+      "target tensor: tensor([[0.0392, 0.3248, 0.4055, 0.0210, 0.2095],\n",
+      "        [0.1232, 0.1203, 0.4612, 0.1213, 0.1740],\n",
+      "        [0.1686, 0.0773, 0.1438, 0.4633, 0.1471]])\n"
      ]
     }
    ],
