--- a/HAR_train_network.ipynb
+++ b/HAR_train_network.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "8e9d693e",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "3c91245a-f916-4f76-8529-79850130f7cb",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2f615a735d0>"
+       "<torch._C.Generator at 0x1c6056875d0>"
       ]
      },
      "execution_count": 4,
@@ -132,13 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "2aa315e0-c34d-40aa-960b-678d106d2b20",
    "metadata": {},
    "outputs": [],
    "source": [
     "bandwidth = bandwidth_init\n",
     "sub_band = sub_band_init\n",
+    "doppler_transforms = DopplerTransformations(n_views=2)\n",
     "\n",
     "csi_act = activities_init\n",
     "activities = []\n",
@@ -220,7 +221,7 @@
     "name_cache = name_base + '_' + str(csi_act) + '_cache_train'\n",
     "dataset_csi_train = create_dataset_single(file_train_selected_expanded, labels_train_selected_expanded,\n",
     "                                            stream_ant_train, input_network, batch_size,\n",
-    "                                            shuffle=True, cache_file=name_cache)\n",
+    "                                            shuffle=True, transform=doppler_transforms)\n",
     "\n",
     "file_val_selected = [all_files_val[idx] for idx in range(len(labels_val)) if labels_val[idx] in\n",
     "                        labels_considered]\n",
@@ -233,7 +234,7 @@
     "name_cache_val = name_base + '_' + str(csi_act) + '_cache_val'\n",
     "dataset_csi_val = create_dataset_single(file_val_selected_expanded, labels_val_selected_expanded,\n",
     "                                        stream_ant_val, input_network, batch_size,\n",
-    "                                        shuffle=False, cache_file=name_cache_val)\n",
+    "                                        shuffle=False, transform=doppler_transforms)\n",
     "\n",
     "file_test_selected = [all_files_test[idx] for idx in range(len(labels_test)) if labels_test[idx] in\n",
     "                        labels_considered]\n",
@@ -246,12 +247,12 @@
     "name_cache_test = name_base + '_' + str(csi_act) + '_cache_test'\n",
     "dataset_csi_test = create_dataset_single(file_test_selected_expanded, labels_test_selected_expanded,\n",
     "                                            stream_ant_test, input_network, batch_size,\n",
-    "                                            shuffle=False, cache_file=name_cache_test)"
+    "                                            shuffle=False, transform=doppler_transforms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "4e073aab",
    "metadata": {},
    "outputs": [
@@ -261,7 +262,7 @@
        "7232"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,6 +531,240 @@
     "            torch.nn.init.xavier_uniform_(module.weight)\n",
     "            if module.bias is not None:\n",
     "                module.bias.data.zero_()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b10b6dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/2188 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of batch_x: torch.Size([1, 1, 340, 100])\n",
+      "tensor([[[[1.5404e-15, 1.5404e-15, 1.5404e-15,  ..., 1.5404e-15,\n",
+      "           1.5404e-15, 1.5404e-15],\n",
+      "          [1.5404e-15, 1.5404e-15, 1.5404e-15,  ..., 1.5404e-15,\n",
+      "           1.5404e-15, 1.5404e-15],\n",
+      "          [1.5404e-15, 1.5404e-15, 1.5404e-15,  ..., 1.5404e-15,\n",
+      "           1.5404e-15, 1.5404e-15],\n",
+      "          ...,\n",
+      "          [1.5404e-15, 1.5404e-15, 1.5404e-15,  ..., 1.5404e-15,\n",
+      "           1.5404e-15, 1.5404e-15],\n",
+      "          [1.5404e-15, 1.5404e-15, 1.5404e-15,  ..., 1.5404e-15,\n",
+      "           1.5404e-15, 1.5404e-15],\n",
+      "          [1.5404e-15, 1.5404e-15, 1.5404e-15,  ..., 1.5404e-15,\n",
+      "           1.5404e-15, 1.5404e-15]]]])\n",
+      "tensor([[[ 1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "          -9.6094e-07, -1.7544e-04, -2.1720e-04, -2.0153e-04, -1.2292e-04,\n",
+      "           0.0000e+00,  1.3131e-04,  2.2510e-04,  2.4347e-04,  1.8311e-04,\n",
+      "          -7.9420e-07,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15]]])\n",
+      "tensor([[[ 1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "          -9.6094e-07, -2.0597e-04, -2.5650e-04, -2.4062e-04, -1.4842e-04,\n",
+      "           0.0000e+00,  1.5994e-04,  2.7403e-04,  2.9725e-04,  2.2718e-04,\n",
+      "          -7.9420e-07,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,\n",
+      "           1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15,  1.5404e-15]]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "iterator = tqdm(dataset_csi_test)\n",
+    "for batch_x, batch_y in iterator:\n",
+    "    if isinstance(batch_x, list):\n",
+    "        # Se batch_x è una lista, stampa la shape dei tensori all'interno\n",
+    "        for i, tensor in enumerate(batch_x):\n",
+    "            print(f\"Shape of batch_x[{i}]:\", tensor.shape)\n",
+    "            print(tensor[:,:,170,:])\n",
+    "            print(tensor[:,:,171,:])\n",
+    "            if i == 0:\n",
+    "                tensor1 = tensor\n",
+    "            if i == 1:\n",
+    "                tensor2 = tensor\n",
+    "    else:\n",
+    "        # Se batch_x non è una lista, stampa direttamente la shape\n",
+    "        print(\"Shape of batch_x:\", batch_x.shape)\n",
+    "        print(batch_x)\n",
+    "        print(batch_x[:,:,170,:])\n",
+    "        print(batch_x[:,:,171,:])\n",
+    "        tensor3 = batch_x\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "366c793d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/2188 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of batch_x[0]: torch.Size([1, 1, 340, 100])\n",
+      "tensor([[[ 1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "          -8.9597e-07, -1.6357e-04, -2.0251e-04, -1.8790e-04, -1.1461e-04,\n",
+      "           0.0000e+00,  1.2243e-04,  2.0988e-04,  2.2701e-04,  1.7073e-04,\n",
+      "          -7.4050e-07,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15]]])\n",
+      "tensor([[[ 1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "          -8.9597e-07, -1.9204e-04, -2.3916e-04, -2.2435e-04, -1.3838e-04,\n",
+      "           0.0000e+00,  1.4912e-04,  2.5550e-04,  2.7715e-04,  2.1182e-04,\n",
+      "          -7.4050e-07,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,\n",
+      "           1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15,  1.4363e-15]]])\n",
+      "Shape of batch_x[1]: torch.Size([1, 1, 340, 100])\n",
+      "tensor([[[ 1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15, -7.7480e-07, -1.4145e-04,\n",
+      "          -1.7512e-04, -1.6249e-04, -9.9112e-05,  0.0000e+00,  1.0587e-04,\n",
+      "           1.8149e-04,  1.9631e-04,  1.4764e-04, -6.4035e-07,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  0.0000e+00,  0.0000e+00,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15]]])\n",
+      "tensor([[[ 1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15, -7.7480e-07, -1.6607e-04,\n",
+      "          -2.0681e-04, -1.9401e-04, -1.1967e-04,  0.0000e+00,  1.2896e-04,\n",
+      "           2.2095e-04,  2.3967e-04,  1.8317e-04, -6.4035e-07,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  0.0000e+00,  0.0000e+00,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,\n",
+      "           1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15,  1.2420e-15]]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "iterator = tqdm(dataset_csi_test)\n",
+    "for batch_x, batch_y in iterator:\n",
+    "    if isinstance(batch_x, list):\n",
+    "        # Se batch_x è una lista, stampa la shape dei tensori all'interno\n",
+    "        for i, tensor in enumerate(batch_x):\n",
+    "            print(f\"Shape of batch_x[{i}]:\", tensor.shape)\n",
+    "            print(tensor[:,:,170,:])\n",
+    "            print(tensor[:,:,171,:])\n",
+    "            if i == 0:\n",
+    "                tensor1 = tensor\n",
+    "            if i == 1:\n",
+    "                tensor2 = tensor\n",
+    "    else:\n",
+    "        # Se batch_x non è una lista, stampa direttamente la shape\n",
+    "        print(\"Shape of batch_x:\", batch_x.shape)\n",
+    "        print(batch_x)\n",
+    "        tensor3 = batch_x\n",
+    "    break"
    ]
   },
   {
