--- a/SimCLR_optuna.ipynb
+++ b/SimCLR_optuna.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x77f5600df8b0>"
+       "<torch._C.Generator at 0x7424cc0df8b0>"
       ]
      },
      "execution_count": 1,
